--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,7 +22,7 @@ svg{
   margin: 0 auto;
 
 }
-* {
+ /** {
   margin: 0;
   padding: 0;
   background-color: #419871;
@@ -42,7 +42,7 @@ g.text {
   margin: 0;
   color: white;
 }
-
+*/
 body {
 
   background: url("../img/space-hd.jpg") no-repeat center fixed;
